sqlite/src/bindings/sqlite3_bindings.rs

unsafe extern "C" {
    pub fn sqlite3_str_vappendf(
        arg1: *mut sqlite3_str,
        zFormat: *const core::ffi::c_char,
        arg2: va_list,
    );
}
unsafe extern "C" {
    pub fn sqlite3_str_append(
        arg1: *mut sqlite3_str,
        zIn: *const core::ffi::c_char,
        N: core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn sqlite3_str_appendall(arg1: *mut sqlite3_str, zIn: *const core::ffi::c_char);
}
unsafe extern "C" {
    pub fn sqlite3_str_appendchar(
        arg1: *mut sqlite3_str,
        N: core::ffi::c_int,
        C: core::ffi::c_char,
    );
}
unsafe extern "C" {
    pub fn sqlite3_str_reset(arg1: *mut sqlite3_str);
}
unsafe extern "C" {
    pub fn sqlite3_str_errcode(arg1: *mut sqlite3_str) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_str_length(arg1: *mut sqlite3_str) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_str_value(arg1: *mut sqlite3_str) -> *mut core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_status(
        op: core::ffi::c_int,
        pCurrent: *mut core::ffi::c_int,
        pHighwater: *mut core::ffi::c_int,
        resetFlag: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_status64(
        op: core::ffi::c_int,
        pCurrent: *mut sqlite3_int64,
        pHighwater: *mut sqlite3_int64,
        resetFlag: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_db_status(
        arg1: *mut sqlite3,
        op: core::ffi::c_int,
        pCur: *mut core::ffi::c_int,
        pHiwtr: *mut core::ffi::c_int,
        resetFlg: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_stmt_status(
        arg1: *mut sqlite3_stmt,
        op: core::ffi::c_int,
        resetFlg: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_pcache {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_pcache_page {
    pub pBuf: *mut core::ffi::c_void,
    pub pExtra: *mut core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_pcache_methods2 {
    pub iVersion: core::ffi::c_int,
    pub pArg: *mut core::ffi::c_void,
    pub xInit: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut core::ffi::c_void) -> core::ffi::c_int,
    >,
    pub xShutdown: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    pub xCreate: ::core::option::Option<
        unsafe extern "C" fn(
            szPage: core::ffi::c_int,
            szExtra: core::ffi::c_int,
            bPurgeable: core::ffi::c_int,
        ) -> *mut sqlite3_pcache,
    >,
    pub xCachesize: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut sqlite3_pcache, nCachesize: core::ffi::c_int),
    >,
    pub xPagecount:
        ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_pcache) -> core::ffi::c_int>,
    pub xFetch: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_pcache,
            key: core::ffi::c_uint,
            createFlag: core::ffi::c_int,
        ) -> *mut sqlite3_pcache_page,
    >,
    pub xUnpin: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_pcache,
            arg2: *mut sqlite3_pcache_page,
            discard: core::ffi::c_int,
        ),
    >,
    pub xRekey: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_pcache,
            arg2: *mut sqlite3_pcache_page,
            oldKey: core::ffi::c_uint,
            newKey: core::ffi::c_uint,
        ),
    >,
    pub xTruncate: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut sqlite3_pcache, iLimit: core::ffi::c_uint),
    >,
    pub xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_pcache)>,
    pub xShrink: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_pcache)>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_pcache_methods {
    pub pArg: *mut core::ffi::c_void,
    pub xInit: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut core::ffi::c_void) -> core::ffi::c_int,
    >,
    pub xShutdown: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    pub xCreate: ::core::option::Option<
        unsafe extern "C" fn(
            szPage: core::ffi::c_int,
            bPurgeable: core::ffi::c_int,
        ) -> *mut sqlite3_pcache,
    >,
    pub xCachesize: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut sqlite3_pcache, nCachesize: core::ffi::c_int),
    >,
    pub xPagecount:
        ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_pcache) -> core::ffi::c_int>,
    pub xFetch: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_pcache,
            key: core::ffi::c_uint,
            createFlag: core::ffi::c_int,
        ) -> *mut core::ffi::c_void,
    >,
    pub xUnpin: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_pcache,
            arg2: *mut core::ffi::c_void,
            discard: core::ffi::c_int,
        ),
    >,
    pub xRekey: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut sqlite3_pcache,
            arg2: *mut core::ffi::c_void,
            oldKey: core::ffi::c_uint,
            newKey: core::ffi::c_uint,
        ),
    >,
    pub xTruncate: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut sqlite3_pcache, iLimit: core::ffi::c_uint),
    >,
    pub xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_pcache)>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_backup {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn sqlite3_backup_init(
        pDest: *mut sqlite3,
        zDestName: *const core::ffi::c_char,
        pSource: *mut sqlite3,
        zSourceName: *const core::ffi::c_char,
    ) -> *mut sqlite3_backup;
}
unsafe extern "C" {
    pub fn sqlite3_backup_step(p: *mut sqlite3_backup, nPage: core::ffi::c_int)
        -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_backup_finish(p: *mut sqlite3_backup) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_backup_remaining(p: *mut sqlite3_backup) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_backup_pagecount(p: *mut sqlite3_backup) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_unlock_notify(
        pBlocked: *mut sqlite3,
        xNotify: ::core::option::Option<
            unsafe extern "C" fn(apArg: *mut *mut core::ffi::c_void, nArg: core::ffi::c_int),
        >,
        pNotifyArg: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_stricmp(
        arg1: *const core::ffi::c_char,
        arg2: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_strnicmp(
        arg1: *const core::ffi::c_char,
        arg2: *const core::ffi::c_char,
        arg3: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_strglob(
        zGlob: *const core::ffi::c_char,
        zStr: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_strlike(
        zGlob: *const core::ffi::c_char,
        zStr: *const core::ffi::c_char,
        cEsc: core::ffi::c_uint,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_log(iErrCode: core::ffi::c_int, zFormat: *const core::ffi::c_char, ...);
}
unsafe extern "C" {
    pub fn sqlite3_wal_hook(
        arg1: *mut sqlite3,
        arg2: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: *mut sqlite3,
                arg3: *const core::ffi::c_char,
                arg4: core::ffi::c_int,
            ) -> core::ffi::c_int,
        >,
        arg3: *mut core::ffi::c_void,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_wal_autocheckpoint(db: *mut sqlite3, N: core::ffi::c_int) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_wal_checkpoint(
        db: *mut sqlite3,
        zDb: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_wal_checkpoint_v2(
        db: *mut sqlite3,
        zDb: *const core::ffi::c_char,
        eMode: core::ffi::c_int,
        pnLog: *mut core::ffi::c_int,
        pnCkpt: *mut core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vtab_config(arg1: *mut sqlite3, op: core::ffi::c_int, ...) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vtab_on_conflict(arg1: *mut sqlite3) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vtab_nochange(arg1: *mut sqlite3_context) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vtab_collation(
        arg1: *mut sqlite3_index_info,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_vtab_distinct(arg1: *mut sqlite3_index_info) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vtab_in(
        arg1: *mut sqlite3_index_info,
        iCons: core::ffi::c_int,
        bHandle: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vtab_in_first(
        pVal: *mut sqlite3_value,
        ppOut: *mut *mut sqlite3_value,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vtab_in_next(
        pVal: *mut sqlite3_value,
        ppOut: *mut *mut sqlite3_value,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_vtab_rhs_value(
        arg1: *mut sqlite3_index_info,
        arg2: core::ffi::c_int,
        ppVal: *mut *mut sqlite3_value,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_stmt_scanstatus(
        pStmt: *mut sqlite3_stmt,
        idx: core::ffi::c_int,
        iScanStatusOp: core::ffi::c_int,
        pOut: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_stmt_scanstatus_v2(
        pStmt: *mut sqlite3_stmt,
        idx: core::ffi::c_int,
        iScanStatusOp: core::ffi::c_int,
        flags: core::ffi::c_int,
        pOut: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_stmt_scanstatus_reset(arg1: *mut sqlite3_stmt);
}
unsafe extern "C" {
    pub fn sqlite3_db_cacheflush(arg1: *mut sqlite3) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_system_errno(arg1: *mut sqlite3) -> core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_snapshot {
    pub hidden: [core::ffi::c_uchar; 48usize],
}
unsafe extern "C" {
    pub fn sqlite3_snapshot_get(
        db: *mut sqlite3,
        zSchema: *const core::ffi::c_char,
        ppSnapshot: *mut *mut sqlite3_snapshot,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_snapshot_open(
        db: *mut sqlite3,
        zSchema: *const core::ffi::c_char,
        pSnapshot: *mut sqlite3_snapshot,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_snapshot_free(arg1: *mut sqlite3_snapshot);
}
unsafe extern "C" {
    pub fn sqlite3_snapshot_cmp(
        p1: *mut sqlite3_snapshot,
        p2: *mut sqlite3_snapshot,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_snapshot_recover(
        db: *mut sqlite3,
        zDb: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_serialize(
        db: *mut sqlite3,
        zSchema: *const core::ffi::c_char,
        piSize: *mut sqlite3_int64,
        mFlags: core::ffi::c_uint,
    ) -> *mut core::ffi::c_uchar;
}
unsafe extern "C" {
    pub fn sqlite3_deserialize(
        db: *mut sqlite3,
        zSchema: *const core::ffi::c_char,
        pData: *mut core::ffi::c_uchar,
        szDb: sqlite3_int64,
        szBuf: sqlite3_int64,
        mFlags: core::ffi::c_uint,
    ) -> core::ffi::c_int;
}
